--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="intro">
 				<img src="http://placehold.it/768x512" alt="Седона">
 			</div>
-			<h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+			<h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
 			<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 			<div class="features">
 				<div class="features-text blue">
@@ -59,18 +59,18 @@
 					<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 				</div>
 			</div>
-			<div class="features">
-				<div class="features-text grey">
+			<div class="features grey">
+				<div class="features-text">
 					<h3>Небольная площадь</h3>
 					<span>— №3 —</span>
 					<p>Все достопримечательности находятся очень близко</p>
 				</div>
-				<div class="features-text grey">
+				<div class="features-text">
 					<h3>Красивая дорога</h3>
 					<span>— №4 —</span>
 					<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
 				</div>
-				<div class="features-text grey">
+				<div class="features-text">
 					<h3>Мало туристов</h3>
 					<span>— №5 —</span>
 					<p>Большинство едет в гранд каньон и толпится там</p>
@@ -80,12 +80,12 @@
 					<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
 					<button>Поиск гостиницы в Седоне</button>
 				</div>
-				<div class="map">
-					<img src="http://placehold.it/512x768" alt="">
-				</div>
 			</div>
 		</main>
 		<footer class="main-footer">
+			<div class="map">
+				<img src="http://placehold.it/512x768" alt="">
+			</div>
 			<section class="footer-hash-tag">
 				<a href="#">#visitsedona</a>
 			</section>
