--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Седона</title>
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
 		<header class="main-header">
 			<div class="logo">
-				<a href="index.html"><img src="http://placehold.it/136x70" alt="logo"></a>
+				<a href="index.html">
+					<img src="img\logo.png" alt="logo" width="138" height="70">
+				</a>
 			</div>
 			<nav class="main-navigation">
 				<ul>
@@ -71,7 +74,7 @@
 			</div>
 			<div class="hotel-item">
 				<div class="hotel-item-photo">
-					<img src="http://placehold.it/135x70">
+					<img src="img\hotel_1.jpg" width="135" height="90">
 				</div>
 				<div class="hotel-item-content">
 					<a href="#">Amara Resort & Spa</a>
@@ -89,20 +92,60 @@
 					<span>Рейтинг: 8,5</span>
 				</div>
 			</div>
-		</main>
+			<div class="hotel-item">
+				<div class="hotel-item-photo">
+					<img src="img\hotel_2.jpg" width="135" height="90">
+				</div>
+				<div class="hotel-item-content">
+					<a href="#">Desert Quail Inn</a>
+					<div class="hotel-item-info">
+						Мотель
+						<a href="#" class="btn hotel-item-detail">Подробнее</a>
+					</div>
+					<div class="hotel-item-info">
+						от 2000 р.
+						<a href="#" class="btn hotel-item-book">Забронировать</a>
+					</div>
+				</div>
+				<div class="hotel-item-rating">
+					<div class="hotel-stars"></div>
+					<span>Рейтинг: 8,9</span>
+				</div>
+			</div>
+			<div class="hotel-item">
+				<div class="hotel-item-photo">
+					<img src="img\hotel_3.jpg" width="135" height="90">
+				</div>
+				<div class="hotel-item-content">
+					<a href="#">Villas at Poco Diablo</a>
+					<div class="hotel-item-info">
+						Аппартаменты
+						<a href="#" class="btn hotel-item-detail">Подробнее</a>
+					</div>
+					<div class="hotel-item-info">
+						от 4000 р.
+						<a href="#" class="btn hotel-item-book">Забронировать</a>
+					</div>
+				</div>
+				<div class="hotel-item-rating">
+					<div class="hotel-stars"></div>
+					<span>Рейтинг: 9,2</span>
+				</div>
+			</div>
+</main>
 		<footer class="main-footer">
 			<section class="footer-hash-tag">
 				<a href="#">#visitsedona</a>
 			</section>
 	  	<section class="footer-social">
-	  		<a class="social-btn social-btn-vk" href="#"><img src="http://placehold.it/20x20" alt=""></a>
-	  		<a class="social-btn social-btn-fb" href="#"><img src="http://placehold.it/20x20" alt=""></a>
-	  		<a class="social-btn social-btn-youtube" href="#"><img src="http://placehold.it/20x20" alt=""></a>
+	  		<a class="social-btn social-btn-vk" href="#"><i class="social-icon"></i></a>
+	  		<a class="social-btn social-btn-fb" href="#"><i class="social-icon"></i></a>
+	  		<a class="social-btn social-btn-youtube" href="#"><i class="social-icon"></i></a>
 	  	</section>
 	  	<section class="footer-by">
 				Website by
 				<a class="btn" href="https://htmlacademy.ru">
-					<img src="http://placehold.it/40x20" alt="">
+					<img src="img\dev_logo.png" width="113" height="39">
 				</a>
 	  	</section>
 		</footer>
