--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Седона</title>
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
 		<header class="main-header">
 			<div class="logo">
-				<img src="http://placehold.it/136x70" alt="logo">
+				<img src="img\logo.png" alt="logo" width="138" height="70">
 			</div>
 			<nav class="main-navigation">
 				<ul>
@@ -21,7 +22,7 @@
 		</header>
 		<main>
 			<div class="intro">
-				<img src="http://placehold.it/768x512" alt="Седона">
+				<img src="img\index-text.png" alt="Седона" width="458" height="352">
 			</div>
 			<h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
 			<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -32,7 +33,7 @@
 					<p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
 				</div>
 				<div class="features-image">
-					<img src="http://placehold.it/512x256" alt="">
+					<img src="img\photo_1.jpg" width="800" height="256">
 				</div>
 			</div>
 			<div class="features">
@@ -51,7 +52,7 @@
 			</div>
 			<div class="features">
 				<div class="features-image">
-					<img src="http://placehold.it/512x256" alt="">
+					<img src="img\photo_2.jpg" width="800" height="256">
 				</div>
 				<div class="features-text blue">
 					<h3>Там есть мост дьявола</h3>
@@ -84,20 +85,20 @@
 		</main>
 		<footer class="main-footer">
 			<div class="map">
-				<img src="http://placehold.it/512x768" alt="">
+				<img src="img\map.jpg" width="1200" height="474">
 			</div>
 			<section class="footer-hash-tag">
 				<a href="#">#visitsedona</a>
 			</section>
 	  	<section class="footer-social">
-	  		<a class="social-btn social-btn-vk" href="#"><img src="http://placehold.it/20x20" alt=""></a>
-	  		<a class="social-btn social-btn-fb" href="#"><img src="http://placehold.it/20x20" alt=""></a>
-	  		<a class="social-btn social-btn-youtube" href="#"><img src="http://placehold.it/20x20" alt=""></a>
+	  		<a class="social-btn social-btn-vk" href="#"><i class="social-icon"></i></a>
+	  		<a class="social-btn social-btn-fb" href="#"><i class="social-icon"></i></a>
+	  		<a class="social-btn social-btn-youtube" href="#"><i class="social-icon"></i></a>
 	  	</section>
 	  	<section class="footer-by">
 				Website by
 				<a class="btn" href="https://htmlacademy.ru">
-					<img src="http://placehold.it/40x20" alt="">
+					<img src="img\dev_logo.png" width="113" height="39">
 				</a>
 	  	</section>
 		</footer>
